--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,17 @@
 
 # Test binary, built with `go test -c`
 *.test
+.prepare_tests/
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # Go workspace file
 go.work
+
+.DS_Store
+
+.vscode
